force-app/main/default/objects/Anarock_Integration_Log__c/Anarock_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Anarock Integration Log</label>
    <nameField>
        <displayFormat>AIL-{00000}</displayFormat>
        <label>Anarock Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anarock Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>