force-app/main/default/objects/Anarock_Integration_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anarock Integration Logs</relationshipLabel>
    <relationshipName>Anarock_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>