force-app/main/default/objects/Anarock_Integration_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Anarock Integration Logs</relationshipLabel>
    <relationshipName>Anarock_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>