force-app/main/default/objects/Anarock_Integration_Log__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>