force-app/main/default/objects/Anarock_Integration_Log__c/listViews/Failures.listView-meta.xml
<ListView>
    <fullName>Failures</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Error_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <label>Failures</label>
</ListView>